@@ -1,3 +1,8 @@
+2019-11-11  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-intro.el (find-org-intro): use \":results output\" (thx Ken
+	Mankoff)
+
 2019-11-04  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (find-org-intro): rewrote everything.
